change the background color to white
white is better than grey as a placeholder

--- a/master.css
+++ b/master.css
@@ -24,7 +24,7 @@ a {
 
 #greeting {
     position: relative;
-    background-color: rgb(190, 190, 190);
+    background-color: white;
     background-image:url('images/portrait.jpg');
     width: 1120px;
     height:745px;
