--- a/master.css
+++ b/master.css
@@ -321,6 +321,7 @@ h4#intern, h4#dreamlogger_history {
     font-family: Palatino, serif;
     font-size: 16px;
     margin-left: 20px;
+    margin-right: 0;
     text-shadow: rgba(0,0,0,0.3) 0 1px 1px;
 }
 .thumb-link {
