--- a/master.css
+++ b/master.css
@@ -82,6 +82,13 @@ a {
     box-shadow: 0 10px 15px rgba(0,0,0,0.6);
 }
 */
+
+#social-media {
+/*    width: 100%;*/
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 .row {
     float: left;
     width: 100%;
